--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,23 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Welcome to the best News Updates </title>
-        {% endif %}
-    </head>
-    <body>
+{% extends 'base.html' %}
+{% import 'macros.html' as macro%}
 
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    {% block styles %}
+    {{ super() }}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+    {% endblock %}
+</head>
+<body>
+    {% block content %}
+    <div class="container">
+
+        <h2 class="text-center" style="font-family: 'Times New Roman', Times, serif;"> TOP NEWS SOURCES AND ARTICLES FROM ALL AROUND THE WORLD</h2>
+        <hr>
+       
+
+{% endblock %}
+    
+</body>
 </html>
