--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Welcome to the best News Updates </title>
-        {% endif %}
-    </head>
-    <body>
-
-    </body>
-</html>
+{% extends 'base.html' %}
+{% import 'macros.html' as macro %}
+<!--Content block-->
+{% block content %}
+<div class="container">
+  <p>{{ macro.displayArticleList(articles) }}</p>
+</div>
+{% endblock %}
