--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -7,17 +7,17 @@
 
        
         <div class="panel panel-default" >
-            <div class="panel-heading" style="background-color: teal; ">
+            <div class="panel-heading" style="background-color: rgb(167, 71, 146); ">
               <a href="/source/{{source.id}}" style="color: white; font-size: 17px;">
                 {{ source.name}}
               </a>
             </div>
-            <div class="panel-body" style="background-color:#faf5f5;">
+            <div class="panel-body" style="background-color:#f8bfbf;">
               <p>
                 {{ source.description |truncate(200)}}
       
               </p>
-              <a href="/source/{{source.id}}" class="btn btn-info btn-sm" style="background-color: teal !important;">Read Articles</a>
+              <a href="/source/{{source.id}}" class="btn btn-info btn-sm" style="background-color: rgb(167, 71, 146) !important;">Read Articles</a>
             </div>
       
       
