--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -5,7 +5,6 @@
 <head>
     {% block styles %}
     {{ super() }}
-    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     {% endblock %}
 </head>
 <body>
@@ -24,7 +23,7 @@
         <div class="thumbnail" >
           
   
-          <div class="caption" style="color: white;background-color: teal;" >
+          <div class="caption" style="color: black;background-color: white;" >
             <h4><a href="{{article.url}}" target="_blank" style="color: white; font-family: 'Times New Roman', Times, serif; text-transform: uppercase;">{{article.title |truncate(45)}}</a></h4>
             <p>{{article.description | truncate(80)}}</p>
             <a href="{{article.url}}" target="_blank" style="color: white;"> Read More</a>
@@ -35,7 +34,7 @@
             <img src="{{article.image}}" alt="{{article.title}}" class="img-responsive" styles="height:30px">
           </a>
           <div class="footer" >
-            Published at: {{article.date}}
+            
           </div>
   
         </div>
