--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% block styles %}
+    {% block styles%}
     {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
     {% endblock %}
 </head>
 <body>
@@ -14,17 +15,17 @@
 
         <h2 class="text-center" style="font-family: 'Times New Roman', Times, serif;"> TOP NEWS AS THEY HAPPEN</h2>
         <hr>
-        <h3 class="text-center" style="font-family: 'Times New Roman', Times, serif;" >Business News Sources</h3>
+        <h3 class="text-center" style="font-family: 'Times New Roman', Times, serif;" >Business News</h3>
         <hr>
         <ul>
             {{ macro.displaySourcesList(business)}}
         </ul>
-        <h3 class="text-center"style="font-family: 'Times New Roman', Times, serif;"> Technology News Sources</h3>
+        <h3 class="text-center"style="font-family: 'Times New Roman', Times, serif;"> Technology News</h3>
         <hr>
         <ul>
             {{ macro.displaySourcesList(technology)}}
         </ul>
-        <h3 class="text-center"style="font-family: 'Times New Roman', Times, serif;">Sports News Sources</h3>
+        <h3 class="text-center"style="font-family: 'Times New Roman', Times, serif;">Sports News</h3>
         <hr>
         <ul>
             {{ macro.displaySourcesList(sports)}}
