--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,6 +1,6 @@
-<div class="navbar navbar-dark bg-primary" role="navigation" style=" min-height: 10vh;  align-items: center; background-color: rgb(168, 76, 107) !important ;">
+<div class="navbar navbar-dark bg-primary" role="navigation" style=" min-height: 10vh;  align-items: center; background-color: black !important ;">
   <div class="container-fluid" style="margin: 0;">
-      <div class="navbar-header">
+      <div class="navbar-header text-center">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" >
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
